[package]
name = "mini-fs"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "A containerized filesystem built on FUSE (Filesystem in Userspace)"

[[bin]]
name = "mini-fs"
path = "src/main.rs"

[dependencies]
fuser = "0.14.0"
clap = {version = "4.5.4", features = ["cargo", "derive"] }
libc = "0.2.153"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
heapless = { version = "0.8.0", features = ["serde"] }
bincode = "1.3.3"
notify-rust = "4.11.0"
